# itmo_stuff

./: .gitignore  README.md
algorithms/: CMakeLists.txt  README.md  decompose.cpp
algorithms/1_2/10/: A.cpp  B.cpp  C.cpp
algorithms/1_2/11/: A.cpp  B.cpp  C.cpp  E.cpp
cgag/: README.md
cgag/lab_01/: .directory  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab_01  lab_01.cbp  lab_02.cbp
cgag/lab_02/: 1.pgm  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab_02  lab_02.cbp
cgag/lab_03/: .directory  2.pgm  3.pgm  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lab_02.cbp  lab_03.cbp
cgag/lab_04/: .gitignore  2.pgm  CMakeLists.txt  Makefile  cmake_install.cmake
oop/: README.md
oop/lab_01/: test.INI  test.INIT
oop/lab_02/: build.gradle.kts  settings.gradle.kts
oop/lab_03/: settings.gradle.kts
oop/lab_05/: settings.gradle.kts
os_and_bash/: M3206_Kazakov_Nikita.7z  README.md  lab_01.7z  lab_02.7z  lab_03.7z  lab_04.7z  lab_05.7z  rmtrash.sh  syslog
os_and_bash/lab_01/: 1.sh  10.sh  2.sh  3.sh  4.sh  5.sh  6.sh  7.sh  8.sh  9.sh  emails.lst
os_and_bash/lab_02/: 1.sh  2.sh  3.sh  4.sh  5.sh  6.sh  7.sh  task_1.txt  task_2.txt  task_4.txt  task_5.txt  task_7.txt
os_and_bash/lab_03/: 1.sh  2.sh  3.sh  4.sh  4_helper.sh  5.sh  5_helper_1.sh  5_helper_2.sh  6.sh  6_helper_1.sh  6_helper_2.sh
os_and_bash/lab_04/: backup.sh  rmtrash.sh  untrash.sh
os_and_bash/lab_05/: lab_05.docx
programming/: README.md
programming/Chess/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lab_08  lab_08.cbp  rubik_input.txt
programming/Chess/include/: Bishop.hpp  Board.hpp  Castle.hpp  Color_c.hpp  Element.hpp  Empty.hpp  Enums.hpp  Figure.h  Figure.hpp  King.hpp  Knight.hpp  Pawn.hpp  Player.h  Player.hpp  Queen.hpp  Turn.hpp
programming/Chess/src/: Bishop.cpp  Board.cpp  Castle.cpp  Element.cpp  Empty.cpp  King.cpp  Knight.cpp  Pawn.cpp  Player.cpp  Queen.cpp  Turn.cpp  main.cpp
programming/lab_01/: Makefile  lab_01
programming/lab_02/: CMakeLists.txt  Makefile  lab_02
programming/lab_03/: CMakeLists.txt  Makefile  lab_03
programming/lab_04/: CMakeLists.txt
programming/lab_05/: CMakeLists.txt  lab_10
programming/lab_06/: CMakeLists.txt
programming/lab_07/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab_07
programming/lab_08/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lab_07  lab_07.cbp  lab_08
programming/lab_08/include/: Center_element.hpp  Corner_element.hpp  Cube.h  Cube.hpp  Element.hpp  Enums.hpp  Interfaces.hpp  Point.hpp  cube.h
programming/lab_08/src/: .directory  Corner_element.cpp  Cube.cpp  Cube_reader.cpp  Element.cpp  main.cpp  Сube.cpp
programming/lab_pdf/: .~lock.lab_3-Казаков-m3106.odt#  .~lock.lab_4-Казаков-m3106.odt#  .~lock.lab_6-Казаков-m3106.odt#  lab_1-Казаков-m3106.odt  lab_2-Казаков-m3106.odt  lab_3-Казаков-m3106.odt  lab_4-Казаков-m3106.odt  lab_6-Казаков-m3106.odt
test/: lab_06.7z
test/lab_06/: CMakeCache.txt  CMakeLists.txt  Makefile  UserInterface.cpp  UserInterface.hpp  cmake_install.cmake  lab_06  lab_06.cbp  lab_06.ilk  main.cpp  Кратенькое_Описание.txt
test/lab_06/entities/include/: Director.hpp  Employer.hpp  Manager.hpp  Rabotyaga.hpp  Report.hpp  Task.hpp  TeamLead.hpp  TotalDayReport.hpp  TotalSprintReport.hpp
test/lab_06/entities/src/: Director.cpp  Employer.cpp  Manager.cpp  Rabotyaga.cpp  Report.cpp  Task.cpp  TeamLead.cpp
test/lab_06/managers/: ManagerIncluder.hpp
test/lab_06/managers/include/: HRManager.hpp  LogManager.hpp  ReportManager.hpp  TaskManager.hpp
test/lab_06/managers/src/: HRManager.cpp  LogManager.cpp  TaskManager.cpp
test/lab_06/utils/: CustomExceptions.hpp  Enums.hpp  TimeChecker.hpp
(+199 files in other folders)
